@@ -3,7 +3,7 @@ dnl Process this file with autoconf to produce a configure script.
 AC_PREREQ(2.53)
 
 # Initialization and versioning
-AC_INIT(gtksourceview, 0.7.0, http://bugzilla.gnome.org/enter_bug.cgi?product=gtksourceview)
+AC_INIT(gtksourceview, 0.7.1, http://bugzilla.gnome.org/enter_bug.cgi?product=gtksourceview)
 AC_CONFIG_SRCDIR([gtksourceview/gtksourcebuffer.h])
 AM_CONFIG_HEADER(config.h)
 
@@ -43,7 +43,14 @@ AC_PATH_PROG(GLIB_MKENUMS, glib-mkenums)
 
 # Environment
 GNOME_COMMON_INIT
-GNOME_COMPILE_WARNINGS(error)
+if test x$MAINT = x; then
+    GNOME_COMPILE_WARNINGS(error)
+    DEPRECATED_FLAGS="-DG_DISABLE_DEPRECATED -DGDK_DISABLE_DEPRECATED -DGDK_PIXBUF_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED"
+else
+    GNOME_COMPILE_WARNINGS(maximum)
+    DEPRECATED_FLAGS=""
+fi
+AC_SUBST(DEPRECATED_FLAGS)
 
 PKG_CHECK_MODULES(DEP,
 	gtk+-2.0 >= $GTK_REQUIRED_VERSION
