@@ -9,12 +9,9 @@ endif
 INCLUDES = 				\
 	-DDATADIR=\""$(datadir)"\" 	\
 	-DG_LOG_DOMAIN=\"GtkSourceView\"\
-	-DG_DISABLE_DEPRECATED 		\
-	-DGTK_DISABLE_DEPRECATED 	\
-	-DGDK_DISABLE_DEPRECATED 	\
-	-DGDK_PIXBUF_DISABLE_DEPRECATED	\
 	-I$(top_srcdir) -I$(srcdir) 	\
 	$(WARN_CFLAGS) 			\
+	$(DEPRECATED_FLAGS)		\
 	$(DEP_CFLAGS)
 
 BUILT_SOURCES = 			\
