@@ -1,3 +1,11 @@
+2004-03-01  Gustavo Giráldez  <gustavo.giraldez@gmx.net>
+
+	* autogen.sh:
+	* configure.in:
+	* gtksourceview/Makefile.am:
+	* tests/Makefile.am: Disable deprecate flags and -Werror when not
+	building in maintainer mode.
+
 2003-12-04  Sanlig Badral  <badral@openmn.org>
 
 	* configure.in: Added "mn" to ALL_LINGUAS.
